1.created the view for the user signIn and SignUp and added the dummy controllers 2.installed the cookie-parser for further process

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,7 @@
         <%= title %>
     </title>
     <link rel="stylesheet" href="/css/layout.css">
+    <script src="https://kit.fontawesome.com/26375a4d69.js" crossorigin="anonymous"></script>
     <%- style %>
 </head>
 <body>
