1.created the logout function and added to the router and user_profile.ejs file

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -13,4 +13,5 @@
     <a href="#"><i class="fa fa-linkedin"></i></a>  
     <a href="#"><i class="fa fa-facebook"></i></a> 
   </div>
+  <a href="/users/destroy-session"><button>Logout</button></a>
 </div>
