1.created the mongoDB store to store the session in the could with the help of the connect-mongo package 2.logout middleware is created it is created with refernce of offical documents, the method of sir is not workin so I have used document method 3.the drawbacks of the login is overcome such as logged user can not visit sign-in and sign-up pages and logged user only can accesss the profile page 4.profile page is filled with the user details 5.navbar is added to the header with styles and href are linked in navbar

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,2 +1,17 @@
 <link rel="stylesheet" href="/css/user_profile.css">
-    <h1>Page - <%= title %></h1>
+
+<h2 style="text-align:center">User Profile</h2>
+
+<div class="card">
+  <img src="https://usuploads.s3.amazonaws.com/itlearn360/uploads/2018/12/dummy-profile-pic-300x300.jpg" alt="John">
+  <h1><%= user.name %></h1>
+  <p class="title">Email : <%= user.email %></p>
+  <p>Name : <%= user.name %></p>
+  <!-- this below icons are not working as link is not working, so it is commented-->
+  <!-- <div style="margin: 24px 0;">
+    <a href="#"><i class="fa fa-dribbble"></i></a> 
+    <a href="#"><i class="fa fa-twitter"></i></a>  
+    <a href="#"><i class="fa fa-linkedin"></i></a>  
+    <a href="#"><i class="fa fa-facebook"></i></a> 
+  </div> -->
+</div>
