--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,44 @@
+<link rel="stylesheet" href="/css/header.css">
 <header>
-    Header
+    <nav class="nav">
+        <a href="#" class="logo">SocialApp</a>
+        <ul class="nav-links">
+            <li><a href="/">Home</a></li>
+        </ul>
+        <% if(locals.user){%>
+            <ul class="nav-links">
+                <li><a href="/users/sign-out">Sign Out</a></li>
+                <li><a href="/users/profile"><%= user.name %></a></li>
+            </ul>
+        <% }else{ %>
+        <ul class="nav-links">
+            <li><a href="/users/sign-in">Sign In</a></li>
+            <li><a href="/users/sign-up">Sign Up</a></li>
+        </ul>
+        <% } %>
+    </nav>
+    <script>
+        const nav = document.querySelector(".nav"),
+            searchIcon = document.querySelector("#searchIcon"),
+            navOpenBtn = document.querySelector(".navOpenBtn"),
+            navCloseBtn = document.querySelector(".navCloseBtn");
+
+        searchIcon.addEventListener("click", () => {
+            nav.classList.toggle("openSearch");
+            nav.classList.remove("openNav");
+            if (nav.classList.contains("openSearch")) {
+                return searchIcon.classList.replace("uil-search", "uil-times");
+            }
+            searchIcon.classList.replace("uil-times", "uil-search");
+        });
+
+        navOpenBtn.addEventListener("click", () => {
+            nav.classList.add("openNav");
+            nav.classList.remove("openSearch");
+            searchIcon.classList.replace("uil-times", "uil-search");
+        });
+        navCloseBtn.addEventListener("click", () => {
+            nav.classList.remove("openNav");
+        });
+    </script>
 </header>
