--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,41 @@
-<footer>
-    Footer
+<link rel="stylesheet" href="/css/footer.css">
+<footer class="footer-distributed">
+
+    <div class="footer-left">
+
+        <h3>Social<span>App</span></h3>
+
+        <p class="footer-links">
+            <a href="/">Home</a>
+            <br>
+            <a href="/users/profile">Profile</a>
+        </p>
+
+        <p class="footer-company-name">© SocialApp.All Rights Reserved</p>
+
+        <div class="footer-icons">
+
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-github"></i></a>
+
+        </div>
+
+    </div>
+
+    <!-- <div class="footer-right">
+
+        <p>Contact Us</p>
+
+        <form action="#" method="post">
+
+            <input type="text" name="email" placeholder="Email">
+            <textarea name="message" placeholder="Message"></textarea>
+            <button>Send</button>
+
+        </form>
+
+    </div> -->
+
 </footer>
