--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/header.css">
 <header>
     <nav class="nav">
-        <a href="#" class="logo">SocialApp</a>
+        <a href="/" class="logo">SocialApp</a>
         <ul class="nav-links">
             <li><a href="/">Home</a></li>
         </ul>
