--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,9 +11,12 @@
 </head>
 <body>
     <%- include("_header"); %>
-    <%- body %>
-    <%- include("_footer"); %>
+    <div class="main">
 
+        <%- body %>
+        
+    </div>
+    <%- include("_footer"); %>
     <%- script %>
 </body>
 </html>
