1.created the postSchema to store posts 2.created the post form for post created used html and scss file named as home.scss and home.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,11 @@
+<link rel="stylesheet" href="/css/home.css">
 
-    
-    <h1>Home Page - <%= title %></h1>
+<div class="create-post">
+    <h1>Create Post</h1>
+    <form class="cf" action="" method="POST">
+        <div>
+            <textarea name="message" type="text" id="input-message" placeholder="Type here"></textarea>
+        </div>
+        <input type="submit" value="Submit" id="input-submit">
+    </form>
+</div>
