--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,4 +1,5 @@
 @import "https://fonts.googleapis.com/css?family=Merriweather";
+@import "https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap";
 /* Clearfix */
 * {
   -moz-box-sizing: border-box;
@@ -91,7 +92,7 @@ form textarea:focus {
 
 form #input-submit {
   color: white;
-  background: #e74c3c;
+  background: #a45eda;
   cursor: pointer;
 }
 
@@ -110,4 +111,58 @@ form #input-submit:hover {
   content: " ";
   display: table;
   clear: both;
+}
+
+.posts {
+  font-family: "Merriweather", sans-serif;
+  display: flex;
+  flex-direction: column;
+  max-width: 520px;
+  margin: 60px auto;
+  border: 1px solid #eee;
+}
+
+.posts * {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizelegibility;
+  letter-spacing: -0.25px;
+}
+
+.posts ol {
+  padding-left: 50px;
+}
+
+.posts li {
+  color: #4F4F4F;
+  padding-left: 16px;
+  margin-top: 24px;
+  position: relative;
+  font-size: 16px;
+  line-height: 20px;
+  list-style-type: none;
+}
+
+.posts li:before {
+  content: "";
+  display: block;
+  height: 22px;
+  width: 22px;
+  border-radius: 50%;
+  border: 2px solid #725151;
+  position: absolute;
+  top: -1px;
+  left: -20px;
+}
+
+.posts strong {
+  color: #292929;
+}
+
+.posts ol.alternating-colors li:nth-child(odd):before {
+  border-color: #0BAD02;
+}
+
+.posts ol.alternating-colors li:nth-child(even):before {
+  border-color: #2378D5;
 }
