--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,8 +1,14 @@
 $color_1: #a8a8a8;
 $color_2: white;
 $font-family_1: "Merriweather", sans-serif;
+$color_11: #4F4F4F;
+$color_21: #292929;
+$font-family_11: "Space Mono", monospace;
+$border-color_1: #0BAD02;
+$border-color_2: #2378D5;
 
 @import "https://fonts.googleapis.com/css?family=Merriweather";
+@import "https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap";
 /* Clearfix */
 * {
 	-moz-box-sizing: border-box;
@@ -83,7 +89,7 @@ form {
 	}
 	#input-submit {
 		color: $color_2;
-		background: #e74c3c;
+		background: #a45eda;
 		cursor: pointer;
 		&:hover {
 			-moz-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
@@ -103,3 +109,63 @@ form {
 		clear: both;
 	}
 }
+
+
+.posts {
+	font-family: $font-family_1;
+	display: flex;
+	flex-direction: column;
+	max-width: 520px;
+	margin: 60px auto;
+	border: 1px solid #eee;
+	// box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.06);
+    * {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        text-rendering: optimizelegibility;
+        letter-spacing: -0.25px;
+    }
+    ol {
+        padding-left: 50px;
+    }
+    li {
+        color: $color_11;
+        padding-left: 16px;
+        margin-top: 24px;
+        position: relative;
+        font-size: 16px;
+        line-height: 20px;
+        list-style-type: none;
+        &:before {
+            content: "";
+            display: block;
+            height: 22px;
+            width: 22px;
+            border-radius: 50%;
+            border: 2px solid #725151;
+            position: absolute;
+            top: -1px;
+            left: -20px;
+        }
+    }
+    strong {
+        color: $color_21;
+    }
+    ol.alternating-colors {
+        li {
+            &:nth-child(odd) {
+                &:before {
+                    border-color: $border-color_1;
+                }
+            }
+            &:nth-child(even) {
+                &:before {
+                    border-color: $border-color_2;
+                }
+            }
+        }
+    }
+}
+
+
+
