--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -98,6 +98,65 @@ form {
 		}
 	}
 }
+.add-comment{
+	display: flex;
+	justify-content: space-around;
+	input {
+		border: 0;
+		outline: 0;
+		padding: 1em;
+		-moz-border-radius: 8px;
+		-webkit-border-radius: 8px;
+		border-radius: 8px;
+		display: block;
+		width: 200%;
+		margin-top: 1em;
+		margin-right: 1em;
+		font-family: $font-family_1;
+		-moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+		-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+		resize: none;
+		&:focus {
+			-moz-box-shadow: 0 0px 2px #e74c3c !important;
+			-webkit-box-shadow: 0 0px 2px #e74c3c !important;
+			box-shadow: 0 0px 2px #e74c3c !important;
+		}
+	}
+}
+
+#input-comment {
+	border: 0;
+	outline: 0;
+	padding: 1em;
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border-radius: 8px;
+	display: block;
+	width: 200%;
+	margin-top: 1em;
+	margin-right: 1em;
+	font-family: $font-family_1;
+	-moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+	resize: none;
+	color: $color_2;
+	background: #a45eda;
+	cursor: pointer;
+	width:70%;
+	&:hover {
+		-moz-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
+		-webkit-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
+		box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
+	}
+	&:focus {
+		-moz-box-shadow: 0 0px 2px #e74c3c !important;
+		-webkit-box-shadow: 0 0px 2px #e74c3c !important;
+		box-shadow: 0 0px 2px #e74c3c !important;
+	}
+}
+
 .cf {
 	&:before {
 		content: " ";
