1.created the create function to create the comment and comment is created in Comments Schema and push it to the Post Schema field of Comments array. 2.Use the populate method to call the comments with the user. 3.Render the Comments content and also the user of comment and displayed it

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -229,3 +229,18 @@ form #input-submit:hover {
 .posts ol.alternating-colors li:nth-child(even):before {
   border-color: #2378D5;
 }
+
+.comment-list {
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+.comment-list .comment p {
+  font-size: medium;
+  font-weight: bold;
+  color: #2d0544;
+}
+
+.comment-list .comment small {
+  color: #4f0d75;
+}
