--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,34 +1,48 @@
 <link rel="stylesheet" href="/css/home.css">
 <% if(locals.user){%>
-    
-<div class="create-post">
-    <h1>Create Post</h1>
-    <form class="cf" action="/posts/create" method="POST">
-        <div>
-            <textarea name="content" type="text" id="input-message" placeholder="Type here"></textarea>
-        </div>
-        <input type="submit" value="Submit" id="input-submit">
-    </form>
-</div>
 
-<div class="posts">
-    <strong>Posts</strong>
-    
-    <ul class="alternating-colors">
-        <% for(let post of posts){ %>
-            <li>
-                <p>
-                    <%= post.content %>
-                </p>
-                <strong>Post By : <%= post.user.name %></strong>
-                <form action="/comments/create" method="POST">
-                    <div class="add-comment">
-                        <input type="text" name="comment" placeholder="comment here">
-                        <button id="input-comment">Send Comment</button>
+    <div class="create-post">
+        <h1>Create Post</h1>
+        <form class="cf" action="/posts/create" method="POST">
+            <div>
+                <textarea name="content" type="text" id="input-message" placeholder="Type here"></textarea>
+            </div>
+            <input type="submit" value="Submit" id="input-submit">
+        </form>
+    </div>
+
+    <div class="posts">
+        <strong>Posts</strong>
+
+        <ul class="alternating-colors">
+            <% for(let post of posts){ %>
+                <li>
+                    <p>
+                        <%= post.content %>
+                    </p>
+                    <strong>Post By : <%= post.user.name %></strong>
+                    <div class="comment-list">
+
+                        <% for(let com of post.comment){%>
+                            <div class="comment">
+                                <p>
+                                    <%= com.content %>
+                                </p>
+                                <small>
+                                    -- <%= com.user.name %>
+                                </small>
+                            </div>
+                            <%} %>
                     </div>
-                </form>
-            </li>
-        <%}%>
-    </ul>
-</div>
-<%} %>
+                    <form action="/comments/create" method="POST">
+                        <div class="add-comment">
+                            <input type="text" name="content" placeholder="comment here">
+                            <input type="hidden" name="post" value="<%= post._id %>">
+                            <button id="input-comment">Send Comment</button>
+                        </div>
+                    </form>
+                </li>
+                <%}%>
+        </ul>
+    </div>
+    <%} %>
