1.Delete Controller for the Post and also comments of that function 2.Make a symbol to delete the Post 3.Crete destroy router with authentication for deletion of post make some changes in the ejs and css for display

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -196,6 +196,15 @@ form #input-submit:hover {
   padding-left: 50px;
 }
 
+.posts .upper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.posts .upper i {
+  color: #e74c3c;
+}
+
 .posts li {
   color: #4F4F4F;
   padding-left: 16px;
