--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,9 +17,14 @@
         <ul class="alternating-colors">
             <% for(let post of posts){ %>
                 <li>
-                    <p>
-                        <%= post.content %>
-                    </p>
+                    <div class="upper">
+                        <p>
+                            <%= post.content %>
+                        </p>
+                        <% if(post.user.id==locals.user.id){%>
+                            <a href="/posts/destroy/<%= post._id %>"><i class="fa-solid fa-trash"></i></a>
+                            <%} %>
+                    </div>
                     <strong>Post By : <%= post.user.name %></strong>
                     <div class="comment-list">
 
