--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,7 @@
                     </div>
                     <strong>Post By : <%= post.user.name %></strong>
                     <div class="comment-list">
-
+                        <h4 class="comment-header">Comments : </h4>
                         <% for(let com of post.comment){%>
                             <div class="comment">
                                 <div>
