1.create the partials of _post.ejs and _comment.ejs for seperate code and also past the post and comment while partial creation 2.modified the content css and username css

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -200,6 +200,8 @@ form #input-submit:hover {
 .posts .upper {
   display: flex;
   justify-content: space-between;
+  font-weight: bold;
+  color: #292929;
 }
 
 .posts .upper i {
