--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -189,6 +189,8 @@ form {
   .upper {
     display: flex;
     justify-content: space-between;
+    font-weight: bold;
+    color: #292929;
     i {
       color: #e74c3c;
     }
