--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,44 +16,8 @@
 
         <ul class="alternating-colors">
             <% for(let post of posts){ %>
-                <li>
-                    <div class="upper">
-                        <p>
-                            <%= post.content %>
-                        </p>
-                        <% if(post.user.id==locals.user.id){%>
-                            <a href="/posts/destroy/<%= post._id %>"><i class="fa-solid fa-trash"></i></a>
-                            <%} %>
-                    </div>
-                    <strong>Post By : <%= post.user.name %></strong>
-                    <div class="comment-list">
-                        <h4 class="comment-header">Comments : </h4>
-                        <% for(let com of post.comment){%>
-                            <div class="comment">
-                                <div>
-                                    <p>
-                                        <%= com.content %>
-                                    </p>
-                                    <% if(locals.user.id==com.user.id){%>
-                                        <a href="/comments/destroy/<%= com._id %>"><i
-                                                class="fa-regular fa-trash-can"></i></a>
-                                        <%} %>
-                                </div>
-                                <small>
-                                    -- <%= com.user.name %>
-                                </small>
-                            </div>
-                            <%} %>
-                    </div>
-                    <form action="/comments/create" method="POST">
-                        <div class="add-comment">
-                            <input type="text" name="content" placeholder="comment here">
-                            <input type="hidden" name="post" value="<%= post._id %>">
-                            <button id="input-comment">Send Comment</button>
-                        </div>
-                    </form>
-                </li>
-                <%}%>
+                <%- include("_post",{post:post})%>
+                    <%}%>
         </ul>
     </div>
     <%} %>
