1.style the layout and footer properly

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,9 +1,9 @@
-body{
-    margin:0;
-    // text-align: center;
-    background-color: #d4bee9;
+body {
+  margin: 0;
+  // text-align: center;
+  background-color: #d4bee9;
 }
 
-.main{
-    height: 100vh;
-  }
+.main {
+  min-height: 100vh;
+}
