--- a/assets/css/user_profile.css
+++ b/assets/css/user_profile.css
@@ -1,3 +1,8 @@
+body {
+  background: #f1f1f1;
+  font-family: arial;
+}
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
