--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,12 +1,17 @@
+<link rel="stylesheet" href="/css/user_sign_in_up.css">
 <link rel="stylesheet" href="/css/user_profile.css">
-
 <h2 style="text-align:center">User Profile</h2>
+
 
 <div class="card">
   <img src="https://usuploads.s3.amazonaws.com/itlearn360/uploads/2018/12/dummy-profile-pic-300x300.jpg" alt="John">
-  <h1><%= user.name %></h1>
-  <p class="title">Email : <%= user.email %></p>
-  <p>Name : <%= user.name %></p>
+  <h1>
+    <%= user_profile.name %>
+  </h1>
+  <p class="title">Email : <%= user_profile.email %>
+  </p>
+  <p>Name : <%= user_profile.name %>
+  </p>
   <!-- this below icons are not working as link is not working, so it is commented-->
   <!-- <div style="margin: 24px 0;">
     <a href="#"><i class="fa fa-dribbble"></i></a> 
@@ -15,3 +20,33 @@
     <a href="#"><i class="fa fa-facebook"></i></a> 
   </div> -->
 </div>
+
+<% if(locals.user && locals.user.id==user_profile.id){ %>
+  <div class="container">
+    <div class="screen">
+      <div class="screen__content">
+        <form method="POST" action="/users/update/<%= user_profile.id %>" class="login">
+          <h1 class="login_header" style="color: rgb(3, 30, 121);">Update Profile</h1>
+          <div class="login__field">
+            <i class="login__icon fas fa-user"></i>
+            <input type="text" class="login__input" placeholder="User Name" name="name" required>
+          </div>
+          <div class="login__field">
+            <i class="login__icon fas fa-user"></i>
+            <input type="email" class="login__input" placeholder="User Email" name="email" required>
+          </div>
+          <button class="button login__submit">
+            <span class="button__text">Update Profile</span>
+            <i class="button__icon fas fa-chevron-right"></i>
+          </button>
+        </form>
+      </div>
+      <div class="screen__background">
+        <span class="screen__background__shape screen__background__shape4"></span>
+        <span class="screen__background__shape screen__background__shape3"></span>
+        <span class="screen__background__shape screen__background__shape2"></span>
+        <span class="screen__background__shape screen__background__shape1"></span>
+      </div>
+    </div>
+  </div>
+  <% } %>
