1.install and added the connect-flash package to index.js 2.pop flash message is provided to the CURD operation and sign in and sign up action 3.use the noty.js for the pop animation with sucess status show

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -8,7 +8,7 @@
         <p class="footer-links">
             <a href="/">Home</a>
             <br>
-            <a href="/users/profile">Profile</a>
+            <a href="/">Profile</a>
         </p>
 
         <p class="footer-company-name">© SocialApp.All Rights Reserved</p>
