--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,22 +1,47 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         <%= title %>
     </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
     <link rel="stylesheet" href="/css/layout.css">
     <script src="https://kit.fontawesome.com/26375a4d69.js" crossorigin="anonymous"></script>
     <%- style %>
 </head>
+
 <body>
     <%- include("_header"); %>
-    <div class="main">
+        <div class="main">
 
-        <%- body %>
-        
-    </div>
-    <%- include("_footer"); %>
-    <%- script %>
+            <%- body %>
+
+        </div>
+        <%- include("_footer"); %>
+            <%- script %>
+                <script>
+                <% if (flash.success && flash.success.length > 0) {%>
+                        new Noty({
+                            theme: "relax",
+                            text: "<%= flash.success %>",
+                            type: "success",
+                            layoout: "topRight",
+                            timeout: 1500
+                        }).show();
+                    <%} %>
+                <% if (flash.error && flash.error.length > 0) {%>
+                        new Noty({
+                            theme: "relax",
+                            text: "<%= flash.error %>",
+                            type: "error",
+                            layoout: "topRight",
+                            timeout: 1500
+                        }).show();
+                    <%} %>
+                </script>
 </body>
+
 </html>
