--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,10 +1,10 @@
-<li>
+<li id="post-<%= post._id %>">
     <div class="upper">
         <p>
             <%= post.content %>
         </p>
         <% if(post.user.id==locals.user.id){%>
-            <a href="/posts/destroy/<%= post._id %>"><i class="fa-solid fa-trash"></i></a>
+            <a class="delete-post-button" href="/posts/destroy/<%= post._id %>"><i class="fa-solid fa-trash"></i></a>
             <%} %>
     </div>
     <p>Post By : <%= post.user.name %>
