--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,8 @@
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="/css/layout.css">
     <script src="https://kit.fontawesome.com/26375a4d69.js" crossorigin="anonymous"></script>
     <%- style %>
